--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.3.7",
     "jade": "*",
-		"socket.io": "*"
+		"socket.io": "*",
+		"less-middleware": "*"
   }
 }
